--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>ThatTonybo</title>
+
+        <style>
+            *, html, body, h1, p, li {
+                font-family: Arial, sans-serif;
+            }
+            
+            .title {
+                color: #5F04C1;
+                background: -webkit-linear-gradient(left, #5F04C1, #7FD6E9);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+        </style>
+    </head>
     <body>
+        <h1 class="title">ThatTonybo</h1>
         <p>Hey, I'm Tony but I go by ThatTonybo online.</p>
         <p>I'm a web developer, furry and retail worker from NSW, Australia.</p>
         <p>There's not much here yet, but here's a few socials:</p>
