Fixed title gradient, added new information

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
             
             .title {
                 color: #5F04C1;
-                background: -webkit-linear-gradient(left, #5F04C1, #7FD6E9);
+                background: linear-gradient(to right, #5F04C1, #7FD6E9);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
+                display: inline-block;
+                margin: 0;
             }
         </style>
     </head>
@@ -20,17 +22,18 @@
         <h1 class="title">ThatTonybo</h1>
         <p>Hey, I'm Tony but I go by ThatTonybo online.</p>
         <p>I'm a web developer, furry and retail worker from NSW, Australia.</p>
-        <p>There's not much here yet, but here's a few socials:</p>
+        <p>I happily help run the elementary Community Discord &mdash; check out <a href="https://elementary.io" target="_blank">elementary OS</a> or <a href="https://discord.com/invite/kwRyqGCzm5" target="_blank">join the server!</a></p>
+        <p>Here's my socials &mdash; the best way to get in touch is via Discord, Telegram or email;</p>
         <ul>
             <li>Discord: @thattonybo</li>
             <li>Telegram: @ThatTonybo</li>
-            <li>Twitter/X: @thattonybo</li>
-            <li>Bluesky: @thattonybo.com</li>
-            <li>Reddit: u/thattonybo</li>
+            <li>Twitter/X: <a href="https://twitter.com/thattonybo" target="_blank">@thattonybo</a></li>
+            <li>Bluesky: <a href="https://bsky.app/profile/thattonybo.com" target="_blank">@thattonybo.com</a></li>
+            <li>Reddit: <a href="https:/reddit.com/u/thattonybo" target="_blank">u/thattonybo</a></li>
             <li>YouTube/Twitch/Steam/GitHub: ThatTonybo</li>
         </ul>
-        <p>And here's my little purple fox:</p>
-        <img src="./fox.png" />
+        <p>Yes, I'm a furry! Here's my little purple fox:</p>
+        <img src="./fox.png" width="240" height="auto" />
         <p>I love anything tech, my main hobby is web dev but I also do game/app dev, work on physical hardware and soldering.</p>
         <p>I have a big collection of tech and a big interest in VR too.</p>
         <p>(p.s. send cuddles please)</p>
